--- a/kde-base/khotkeys/ChangeLog
+++ b/kde-base/khotkeys/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/khotkeys
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/khotkeys/ChangeLog,v 1.90 2008/05/12 21:21:19 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/khotkeys/ChangeLog,v 1.91 2008/05/15 10:59:12 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> khotkeys-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> khotkeys-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
