--- a/kde-base/kdesktop/ChangeLog
+++ b/kde-base/kdesktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesktop
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesktop/Attic/ChangeLog,v 1.112 2008/05/13 14:16:28 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesktop/Attic/ChangeLog,v 1.113 2008/05/15 12:13:51 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kdesktop-3.5.9-r1.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kdesktop-3.5.9-r1.ebuild:
   Stable for HPPA (bug #221063).
