--- a/kde-base/kdeprint/ChangeLog
+++ b/kde-base/kdeprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeprint
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeprint/Attic/ChangeLog,v 1.91 2008/05/12 22:57:37 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeprint/Attic/ChangeLog,v 1.92 2008/05/15 12:41:40 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kdeprint-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kdeprint-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
