--- a/kde-base/ksmserver/ChangeLog
+++ b/kde-base/ksmserver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksmserver
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ksmserver/ChangeLog,v 1.85 2008/05/12 21:26:46 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ksmserver/ChangeLog,v 1.86 2008/05/15 13:05:51 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> ksmserver-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> ksmserver-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
