--- a/kde-base/knetworkconf/ChangeLog
+++ b/kde-base/knetworkconf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/knetworkconf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/knetworkconf/Attic/ChangeLog,v 1.11 2008/05/13 00:22:36 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/knetworkconf/Attic/ChangeLog,v 1.12 2008/05/15 13:26:24 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> knetworkconf-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> knetworkconf-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
