--- a/kde-base/kdesdk-kioslaves/ChangeLog
+++ b/kde-base/kdesdk-kioslaves/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.81 2008/04/03 20:59:39 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.82 2008/05/15 16:06:06 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdesdk-kioslaves-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
 *kdesdk-kioslaves-4.0.3 (03 Apr 2008)
 
