--- a/kde-base/kdesdk/ChangeLog
+++ b/kde-base/kdesdk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesdk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk/Attic/ChangeLog,v 1.167 2008/02/27 22:35:55 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk/Attic/ChangeLog,v 1.168 2008/05/15 16:15:34 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kdesdk-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   27 Feb 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-3.5.9.ebuild:
   Marked ~hppa.
