--- a/kde-base/kuiviewer/ChangeLog
+++ b/kde-base/kuiviewer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kuiviewer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.72 2008/04/03 21:36:40 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.73 2008/05/15 16:03:19 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kuiviewer-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
 *kuiviewer-4.0.3 (03 Apr 2008)
 
