--- a/kde-base/kdeartwork-kscreensaver/ChangeLog
+++ b/kde-base/kdeartwork-kscreensaver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kscreensaver
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-kscreensaver/ChangeLog,v 1.95 2008/05/13 03:36:59 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-kscreensaver/ChangeLog,v 1.96 2008/05/15 16:21:56 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdeartwork-kscreensaver-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdeartwork-kscreensaver-3.5.9.ebuild:
