--- a/media-sound/alsa-utils/ChangeLog
+++ b/media-sound/alsa-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.234 2008/05/15 18:03:00 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.235 2008/05/15 18:14:41 beandog Exp $
+
+  15 May 2008; Steve Dibb <beandog@gentoo.org> alsa-utils-1.0.16-r2.ebuild:
+  Use $ROOT for install of modprobe file
 
 *alsa-utils-1.0.16-r2 (15 May 2008)
 
