--- a/kde-base/cervisia/ChangeLog
+++ b/kde-base/cervisia/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/cervisia
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/cervisia/ChangeLog,v 1.84 2008/05/15 15:39:10 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/cervisia/ChangeLog,v 1.85 2008/05/15 22:38:03 ingmar Exp $
+
+*cervisia-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +cervisia-4.0.4.ebuild:
+  Added KDE 4.0.4 version of cervisia. Thanks to Jorge Manuel B. S. Vicetto.
 
   15 May 2008; Markus Rothe <corsair@gentoo.org> cervisia-3.5.9.ebuild:
   Stable on ppc64; bug #221063
