--- a/kde-base/kcheckpass/ChangeLog
+++ b/kde-base/kcheckpass/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kcheckpass
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcheckpass/ChangeLog,v 1.91 2008/05/15 12:09:34 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcheckpass/ChangeLog,v 1.92 2008/05/15 22:53:18 ingmar Exp $
+
+*kcheckpass-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  +kcheckpass-4.0.4.ebuild:
+  Added KDE 4.0.4 version of kcheckpass. Thanks to Jorge Manuel B. S.
+  Vicetto.
 
   15 May 2008; Markus Rothe <corsair@gentoo.org> kcheckpass-3.5.9.ebuild:
   Stable on ppc64; bug #221063
