--- a/kde-base/knewsticker/ChangeLog
+++ b/kde-base/knewsticker/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/knewsticker
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/knewsticker/Attic/ChangeLog,v 1.91 2008/05/14 16:43:44 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/knewsticker/Attic/ChangeLog,v 1.92 2008/05/16 00:02:45 ingmar Exp $
+
+*knewsticker-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  +knewsticker-4.0.4.ebuild:
+  Added KDE 4.0.4 version of knewsticker. Thanks to Jorge Manuel B. S.
+  Vicetto.
 
   14 May 2008; Markus Rothe <corsair@gentoo.org> knewsticker-3.5.9.ebuild:
   Stable on ppc64; bug #221063
