--- a/kde-base/kuiviewer/ChangeLog
+++ b/kde-base/kuiviewer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kuiviewer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.73 2008/05/15 16:03:19 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.74 2008/05/16 00:37:31 ingmar Exp $
+
+*kuiviewer-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +kuiviewer-4.0.4.ebuild:
+  Added KDE 4.0.4 version of kuiviewer. Thanks to Jorge Manuel B. S.
+  Vicetto.
 
   15 May 2008; Markus Rothe <corsair@gentoo.org> kuiviewer-3.5.9.ebuild:
   Stable on ppc64; bug #221063
