--- a/kde-base/kwordquiz/ChangeLog
+++ b/kde-base/kwordquiz/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kwordquiz
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kwordquiz/ChangeLog,v 1.91 2008/05/14 20:13:44 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kwordquiz/ChangeLog,v 1.92 2008/05/16 00:41:32 ingmar Exp $
+
+*kwordquiz-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +kwordquiz-4.0.4.ebuild:
+  Added KDE 4.0.4 version of kwordquiz. Thanks to Jorge Manuel B. S.
+  Vicetto.
 
   14 May 2008; Markus Rothe <corsair@gentoo.org> kwordquiz-3.5.9.ebuild:
   Stable on ppc64; bug #221063
