--- a/kde-base/plasma/ChangeLog
+++ b/kde-base/plasma/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/plasma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/plasma/Attic/ChangeLog,v 1.8 2008/04/03 21:46:30 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/plasma/Attic/ChangeLog,v 1.9 2008/05/16 00:55:19 ingmar Exp $
+
+*plasma-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +plasma-4.0.4.ebuild:
+  Added KDE 4.0.4 version of plasma. Thanks to Jorge Manuel B. S. Vicetto.
 
 *plasma-4.0.3 (03 Apr 2008)
 
