--- a/dev-ruby/activeresource/ChangeLog
+++ b/dev-ruby/activeresource/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activeresource
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.9 2008/05/13 18:18:16 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.10 2008/05/16 17:32:01 nixnut Exp $
+
+  16 May 2008; nixnut <nixnut@gentoo.org> activeresource-2.0.2.ebuild:
+  Stable on ppc wrt bug 221309
 
   13 May 2008; Hans de Graaff <graaff@gentoo.org> Manifest:
   Redigest packages due to packaging changes upstream, bug 221829
