--- a/app-dicts/sword-kekchi/ChangeLog
+++ b/app-dicts/sword-kekchi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/sword-kekchi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/sword-kekchi/ChangeLog,v 1.1 2008/05/13 21:29:32 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/sword-kekchi/ChangeLog,v 1.2 2008/05/17 03:00:57 beandog Exp $
+
+  17 May 2008; Steve Dibb <beandog@gentoo.org> sword-kekchi-1.2.ebuild:
+  Update license
 
 *sword-kekchi-1.2 (13 May 2008)
 
