--- a/media-sound/mpg123/ChangeLog
+++ b/media-sound/mpg123/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mpg123
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.155 2008/05/11 20:22:30 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.156 2008/05/17 08:47:13 drac Exp $
+
+  17 May 2008; Samuli Suominen <drac@gentoo.org> mpg123-1.3.1.ebuild,
+  mpg123-1.4.1.ebuild, mpg123-1.4.2.ebuild:
+  Move mpg123 to new-style virtual.
 
 *mpg123-1.4.2 (11 May 2008)
 
