--- a/dev-util/astyle/ChangeLog
+++ b/dev-util/astyle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/astyle
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/astyle/ChangeLog,v 1.21 2008/05/12 06:03:36 nerdboy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/astyle/ChangeLog,v 1.22 2008/05/17 13:54:53 klausman Exp $
+
+  17 May 2008; Tobias Klausmann <klausman@gentoo.org> astyle-1.21.ebuild:
+  Stable on alpha, bug #220739
 
 *astyle-1.22 (12 May 2008)
 
@@ -18,7 +21,7 @@
   Dropped ppc-macos keyword, see you in prefix
 
   14 Nov 2007; Robin H. Johnson <robbat2@gentoo.org> astyle-1.21.ebuild:
-  Fix $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/astyle/ChangeLog,v 1.21 2008/05/12 06:03:36 nerdboy Exp $ string.
+  Fix $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/astyle/ChangeLog,v 1.22 2008/05/17 13:54:53 klausman Exp $ string.
 
 *astyle-1.21 (07 Oct 2007)
 
