--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.122 2008/05/17 13:01:06 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.123 2008/05/17 19:18:34 armin76 Exp $
+
+  17 May 2008; Raúl Porcel <armin76@gentoo.org> libgphoto2-2.2.1-r1.ebuild,
+  libgphoto2-2.3.1-r5.ebuild, libgphoto2-2.4.0-r1.ebuild,
+  libgphoto2-2.4.1.ebuild:
+  Drop ia64, no hardware to test
 
   17 May 2008; Christian Faulhammer <opfer@gentoo.org>
   libgphoto2-2.4.1.ebuild:
