--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1418 2008/05/16 15:35:11 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1419 2008/05/17 19:24:29 dev-zero Exp $
+
+  17 May 2008; Tiziano Müller <dev-zero@gentoo.org> package.mask:
+  Unmasked new-style postgresql packages
 
   16 May 2008; Rémi Cardona <remi@gentoo.org> package.mask:
   add dev-util/glademm and dev-cpp/bakery to package.mask
