--- a/kde-base/kcron/ChangeLog
+++ b/kde-base/kcron/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kcron
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcron/ChangeLog,v 1.86 2008/05/15 22:57:33 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcron/ChangeLog,v 1.87 2008/05/18 18:19:17 maekke Exp $
+
+  18 May 2008; Markus Meier <maekke@gentoo.org> kcron-3.5.9.ebuild:
+  amd64/x86 stable, bug #221063
 
 *kcron-4.0.4 (15 May 2008)
 
