--- a/kde-base/klipper/ChangeLog
+++ b/kde-base/klipper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/klipper
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klipper/ChangeLog,v 1.91 2008/05/15 23:52:44 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klipper/ChangeLog,v 1.92 2008/05/18 18:08:01 maekke Exp $
+
+  18 May 2008; Markus Meier <maekke@gentoo.org> klipper-3.5.9.ebuild:
+  amd64/x86 stable, bug #221063
 
 *klipper-4.0.4 (15 May 2008)
 
