--- a/kde-base/kompare/ChangeLog
+++ b/kde-base/kompare/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kompare
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kompare/ChangeLog,v 1.84 2008/05/16 00:06:01 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kompare/ChangeLog,v 1.85 2008/05/18 18:36:28 maekke Exp $
+
+  18 May 2008; Markus Meier <maekke@gentoo.org> kompare-3.5.9.ebuild:
+  amd64/x86 stable, bug #221063
 
 *kompare-4.0.4 (15 May 2008)
 
