--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.330 2008/05/18 15:33:39 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.331 2008/05/18 19:56:19 klausman Exp $
+
+  18 May 2008; Tobias Klausmann <klausman@gentoo.org> vlc-0.8.6g.ebuild:
+  Stable on alpha, bug #221959
 
 *vlc-0.8.6g (18 May 2008)
 
