--- a/media-video/smplayer/ChangeLog
+++ b/media-video/smplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/smplayer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/smplayer/ChangeLog,v 1.19 2008/05/14 15:45:51 yngwin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/smplayer/ChangeLog,v 1.20 2008/05/18 23:09:20 jer Exp $
+
+  18 May 2008; Jeroen Roovers <jer@gentoo.org> smplayer-0.6.0_rc4.ebuild:
+  Stable for HPPA.
 
 *smplayer-0.6.0 (14 May 2008)
 
