--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1423 2008/05/19 03:08:28 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1424 2008/05/19 04:49:24 dirtyepic Exp $
+
+  19 May 2008; Ryan Hill <dirtyepic@gentoo.org> updates/2Q-2008:
+  Move ttf-gentium -> sil-gentium.
 
   19 May 2008; Ryan Hill <dirtyepic@gentoo.org> updates/2Q-2008:
   Move ttf-sil-ezra -> sil-ezra.
