--- a/dev-ruby/ruby-gtkhtml2/ChangeLog
+++ b/dev-ruby/ruby-gtkhtml2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gtkhtml2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ChangeLog,v 1.18 2008/04/22 18:11:41 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkhtml2/Attic/ChangeLog,v 1.19 2008/05/19 05:24:50 graaff Exp $
+
+  19 May 2008; Hans de Graaff <graaff@gentoo.org>
+  ruby-gtkhtml2-0.16.0.ebuild:
+  Fix pkgconfig dependency #217278
 
   22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
   -ruby-gtkhtml2-0.14.1.ebuild, -ruby-gtkhtml2-0.15.0.ebuild:
