--- a/dev-ruby/ruby-poppler/ChangeLog
+++ b/dev-ruby/ruby-poppler/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-poppler
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.4 2008/04/22 18:32:15 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.5 2008/05/19 05:31:35 graaff Exp $
+
+  19 May 2008; Hans de Graaff <graaff@gentoo.org>
+  ruby-poppler-0.16.0.ebuild:
+  Fix pkgconfig dependency #217278
 
   22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
   -ruby-poppler-0.15.0.ebuild:
