--- a/app-admin/eselect-postgresql/ChangeLog
+++ b/app-admin/eselect-postgresql/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-postgresql
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-postgresql/ChangeLog,v 1.2 2008/04/15 20:45:31 dev-zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-postgresql/ChangeLog,v 1.3 2008/05/19 07:06:50 dev-zero Exp $
+
+  19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
+  eselect-postgresql-0.3.ebuild:
+  Keyworded for all archs having postgresql keyworded
 
   15 Apr 2008; Tiziano Müller <dev-zero@gentoo.org>
   eselect-postgresql-0.3.ebuild:
