--- a/dev-cpp/libxmlpp/ChangeLog
+++ b/dev-cpp/libxmlpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/libxmlpp
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.67 2008/05/02 08:52:24 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.68 2008/05/19 18:17:39 nixnut Exp $
+
+  19 May 2008; nixnut <nixnut@gentoo.org> libxmlpp-2.22.0.ebuild:
+  Stable on ppc wrt bug 222749
 
   02 May 2008; Rémi Cardona <remi@gentoo.org>
   +files/libxmlpp-1.0.5-gcc43.patch, libxmlpp-1.0.5.ebuild:
