--- a/kde-base/kpackage/ChangeLog
+++ b/kde-base/kpackage/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpackage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpackage/Attic/ChangeLog,v 1.53 2008/05/16 07:06:07 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpackage/Attic/ChangeLog,v 1.54 2008/05/19 19:57:41 maekke Exp $
+
+  19 May 2008; Markus Meier <maekke@gentoo.org> kpackage-3.5.9.ebuild:
+  amd64/x86 stable, bug #221063
 
   16 May 2008; Markus Rothe <corsair@gentoo.org> kpackage-3.5.9.ebuild:
   Stable on ppc64; bug #221063
