--- a/kde-base/dcopc/ChangeLog
+++ b/kde-base/dcopc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/dcopc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/dcopc/Attic/ChangeLog,v 1.26 2008/02/20 22:31:48 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/dcopc/Attic/ChangeLog,v 1.27 2008/05/19 23:31:17 carlo Exp $
+
+  19 May 2008; Carsten Lohrke <carlo@gentoo.org> dcopc-3.5.9.ebuild:
+  Stable on amd64 and x86.
 
 *dcopc-3.5.9 (20 Feb 2008)
 
