--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1435 2008/05/20 07:42:35 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.1436 2008/05/20 09:13:35 chainsaw Exp $
+
+  20 May 2008; <chainsaw@gentoo.org> package.mask:
+  Mask audacious-crossfade for planned removal on June 30; bug #222883.
 
   20 May 2008; Vlastimil Babka <caster@gentoo.org> package.mask:
   Split one app-arch/rpm mask to two masks - one for a specific revision of
