--- a/media-libs/portaudio/ChangeLog
+++ b/media-libs/portaudio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/portaudio
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.49 2008/01/12 18:16:56 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.50 2008/05/20 09:22:41 drac Exp $
+
+  20 May 2008; Samuli Suominen <drac@gentoo.org>
+  portaudio-19_pre20071207.ebuild:
+  Restore USE jack.
 
 *portaudio-19_pre20071207 (12 Jan 2008)
 
