--- a/dev-libs/libxslt/ChangeLog
+++ b/dev-libs/libxslt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.177 2008/05/20 14:34:44 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.178 2008/05/20 15:56:32 jer Exp $
+
+  20 May 2008; Jeroen Roovers <jer@gentoo.org> libxslt-1.1.24.ebuild:
+  Stable for HPPA (bug #222499).
 
   20 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   libxslt-1.1.24.ebuild:
